test/error/parser_files/pattern_product02.st
f x ((x ()) : prod int unit) := ()
