test/error/parser_files/pattern_product02.err
File "parser_files/pattern_product02.st", line 1, characters 9-11:
1 | f x ((x ()) : prod int unit) := ()
            ^^
Error: Syntax error.
Hint: Product has a ',' to separated element.
